checkstyle refactoring